# Market-Data-Platform-for-Analytics-Execution

./: .env.example  Dockerfile  Dockerfile.airflow  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
dags/: market_data_dag.py
examples/: analytics_queries.sql
sql/postgres/: 001_create_market_data.sql  002_create_airflow_db.sql
src/market_data_platform/: __init__.py  cli.py  config.py  contracts.py  logging_utils.py  schema.py
src/market_data_platform/ingestion/: __init__.py  base.py  binance.py
src/market_data_platform/monitoring/: metrics.py
src/market_data_platform/orchestration/: data_quality.py  jobs.py  scheduler.py  staged_etl.py
src/market_data_platform/quant/: __init__.py  backtesting.py  metrics.py
src/market_data_platform/signals/: __init__.py  models.py  thresholds.py
src/market_data_platform/storage/: __init__.py  parquet.py  parquet_scan.py  postgres.py  state.py
src/market_data_platform/streaming/: __init__.py  models.py  pipeline.py  storage.py
src/market_data_platform/transformation/: __init__.py  cleaning.py  features.py
src/market_data_platform/utils/: __init__.py  time_utils.py
tests/: test_backtesting.py  test_cleaning.py  test_features.py  test_streaming.py
