[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-platform"
version = "0.1.0"
description = "Production-style ETL pipeline for financial market data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zixsa"}
]
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.1.4",
  "psycopg[binary]>=3.2.1",
  "pyarrow>=16.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[project.scripts]
market-data = "market_data_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
